--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: 2.1.7
 
 
   # The following adds the Cupertino Icons font to your application.
